# open_manipulator_sara

./: README.md
open_manipulator_sara_bringup/: CMakeLists.txt  package.xml
open_manipulator_sara_bringup/config/: gazebo_controller_manager.yaml  hardware_controller_manager.yaml  leader_controller_manager.yaml
open_manipulator_sara_bringup/launch/: base.launch.py  dual_robot.launch.py  fake.launch.py  gazebo.launch.py  hardware.launch.py
open_manipulator_sara_bringup/scripts/: leader_follower_mirror.py
open_manipulator_sara_description/: CMakeLists.txt  package.xml
open_manipulator_sara_description/gazebo/: materials.xacro  open_manipulator_sara.gazebo.xacro
open_manipulator_sara_description/launch/: model.launch.py
open_manipulator_sara_description/ros2_control/: open_manipulator_sara_system.ros2_control.xacro
open_manipulator_sara_description/urdf/: open_manipulator_sara.urdf.xacro  open_manipulator_sara_robot.urdf.xacro
open_manipulator_sara_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
open_manipulator_sara_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  moveit_servo.yaml  open_manipulator_sara.srdf
open_manipulator_sara_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_core.launch.py  moveit_rviz.launch.py  rsp.launch.py
