<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>open_manipulator_sara_bringup</name>
  <version>1.0.0</version>
  <description>
    OpenManipulator SARA 6-DOF bringup package with dual-robot support.
  </description>
  <maintainer email="jwson@robotis.com">jwson</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>gripper_controllers</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>open_manipulator_sara_description</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
